// ── MASTER DATA ─────────────────────────────────────────────

Table tahun_periode {
  id int [pk, increment]
  tahun int [not null]
  status varchar [not null, note: 'Aktif / Tidak Aktif']
}

Table lembaga_akreditasi {
  id int [pk, increment]
  nama_lembaga varchar [not null, note: 'BAN-PT S1, BAN-PT S2, BAN-PT S3']
  keterangan varchar
}

Table auditee_pusat {
  id int [pk, increment]
  nama varchar [not null, note: 'STTII Yogyakarta']
}

Table auditee {
  id int [pk, increment]
  kode varchar [not null]
  nama_auditee varchar [not null, note: 'Sarjana Teologi, Magister Teologi, Doktor Teologi']
  jenjang varchar [not null, note: 'PRODI']
  auditee_pusat_id int [ref: > auditee_pusat.id]
  alamat text
}

Table unit_penunjang {
  id int [pk, increment]
  nama_unit varchar [not null]
  auditee_pusat_id int [ref: > auditee_pusat.id]
}


// ── STANDAR MUTU & INDIKATOR ─────────────────────────────────

Table standar_mutu {
  id int [pk, increment]
  kode varchar [not null, note: 'A, A.1, A.1.1, dst']
  nama_standar varchar [not null]
  parent_id int [ref: > standar_mutu.id, note: 'Self-referencing: Standar > Sub Standar > Butir']
  lembaga_akreditasi_id int [ref: > lembaga_akreditasi.id]
  tahun_periode_id int [ref: > tahun_periode.id]
  level int [not null, note: '1=Standar, 2=Sub Standar, 3=Butir']
}

Table indikator {
  id int [pk, increment]
  standar_mutu_id int [ref: > standar_mutu.id]
  deskripsi text [not null]
  bobot int [note: 'Bobot penilaian indikator']
}


// ── PELAKSANAAN ──────────────────────────────────────────────

Table pengaturan_periode {
  id int [pk, increment]
  tahun_periode_id int [ref: > tahun_periode.id]
  lembaga_akreditasi_id int [ref: > lembaga_akreditasi.id]
  mulai_evaluasi_diri date
  akhir_evaluasi_diri date
  mulai_desk_eval date
  akhir_desk_eval date
  mulai_visitasi date
  akhir_visitasi date
}

Table target_nilai_mutu {
  id int [pk, increment]
  pengaturan_periode_id int [ref: > pengaturan_periode.id]
  auditee_id int [ref: > auditee.id]
  target_nilai float [not null]
}

Table evaluasi_diri {
  id int [pk, increment]
  auditee_id int [ref: > auditee.id]
  pengaturan_periode_id int [ref: > pengaturan_periode.id]
  nilai_evaluasi float [default: 0.00]
  status varchar [note: 'Draft / Submitted / Approved']
}


// ── MANAJEMEN DOKUMEN ────────────────────────────────────────

Table kategori_dokumen {
  id int [pk, increment]
  nama_kategori varchar [not null, note: 'KEBIJAKAN MUTU, MANUAL MUTU, STANDAR MUTU, dst']
}

Table jenis_dokumen {
  id int [pk, increment]
  nama_jenis varchar [not null]
  kategori_dokumen_id int [ref: > kategori_dokumen.id]
}

Table manajemen_dokumen {
  id int [pk, increment]
  jenis_dokumen_id int [ref: > jenis_dokumen.id]
  auditee_id int [ref: > auditee.id]
  user_id int [note: 'FK ke tabel users']
  nama_dokumen varchar [not null]
  tahun int
  file_path varchar [not null]
}


// ── EVALUASI AMI ─────────────────────────────────────────────

Table auditor {
  id int [pk, increment]
  nama varchar [not null]
  email varchar [unique]
  keahlian varchar
}

Table jenis_temuan {
  id int [pk, increment]
  nama varchar [not null, note: 'Kesesuaian, KTS, Observasi']
  status varchar [not null, note: 'Positif / Negatif']
}

Table kategori_temuan {
  id int [pk, increment]
  nama_kategori varchar [not null, note: 'Mayor, Minor, Observasi, Tidak Melampaui, Melampaui']
  jenis_temuan_id int [ref: > jenis_temuan.id]
}

Table desk_evaluation {
  id int [pk, increment]
  evaluasi_diri_id int [ref: > evaluasi_diri.id]
  auditor_id int [ref: > auditor.id]
  indikator_id int [ref: > indikator.id]
  nilai float [default: 0.00]
  catatan text
}

Table temuan {
  id int [pk, increment]
  desk_evaluation_id int [ref: > desk_evaluation.id]
  kategori_temuan_id int [ref: > kategori_temuan.id]
  deskripsi text [not null]
  rekomendasi text
  status_approval varchar [note: 'Pending / Approved / Rejected']
}

Table rekap_temuan_approval {
  id int [pk, increment]
  auditee_id int [ref: > auditee.id]
  pengaturan_periode_id int [ref: > pengaturan_periode.id]
  jumlah_temuan int [default: 0]
  status_approval varchar [note: 'Pending / Approved']
  tanggal_approval date
  approved_by varchar [note: 'Nama approver']
}

Table laporan_ami {
  id int [pk, increment]
  pengaturan_periode_id int [ref: > pengaturan_periode.id]
  auditee_id int [ref: > auditee.id]
  file_laporan varchar
  tanggal_laporan date
  status varchar [note: 'Draft / Final']
}


// ── PENGENDALIAN & PENINGKATAN ───────────────────────────────

Table daftar_temuan_pp {
  id int [pk, increment]
  temuan_id int [ref: > temuan.id]
  rekap_approval_id int [ref: > rekap_temuan_approval.id]
  auditee_id int [ref: > auditee.id]
  pengaturan_periode_id int [ref: > pengaturan_periode.id]
  uraian_temuan text
  jenis varchar [note: 'KTS Mayor, KTS Minor, Observasi']
  status varchar [note: 'Open / In Progress / Closed']
}

Table daftar_kesesuaian {
  id int [pk, increment]
  auditee_id int [ref: > auditee.id]
  standar_mutu_id int [ref: > standar_mutu.id]
  pengaturan_periode_id int [ref: > pengaturan_periode.id]
  deskripsi text
  peningkatan text [note: 'Uraian peningkatan yang dilakukan']
  nilai_mutu float
  temuan_positif text
  filter_tampilan varchar [note: 'Semua / Per Program Studi']
}

Table rencana_tindak_lanjut {
  id int [pk, increment]
  daftar_temuan_pp_id int [ref: > daftar_temuan_pp.id]
  auditee_id int [ref: > auditee.id]
  uraian_rtm text [not null]
  penanggung_jawab varchar
  target_selesai date
  status varchar [note: 'Belum / Dalam Proses / Selesai']
}

Table draft_laporan_rtm {
  id int [pk, increment]
  rencana_tindak_lanjut_id int [ref: > rencana_tindak_lanjut.id]
  pengaturan_periode_id int [ref: > pengaturan_periode.id]
  auditee_id int [ref: > auditee.id]
  nama_dokumen varchar [not null, note: 'LAPORAN RTM']
  file_path varchar
  tanggal_dibuat date
  status varchar [note: 'Draft / Final']
}

Table upload_laporan_rtm {
  id int [pk, increment]
  draft_laporan_rtm_id int [ref: > draft_laporan_rtm.id]
  auditee_id int [ref: > auditee.id]
  tahun_periode_id int [ref: > tahun_periode.id]
  nama_dokumen varchar [not null]
  file_path varchar [not null]
  tanggal_upload datetime
  status_download varchar [note: 'Tersedia / Tidak Tersedia']
}
